css: initial positioning

--- a/src/app/@ansyn/ansyn/modules/status-bar/components/combo-boxes/combo-boxes.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/combo-boxes/combo-boxes.component.less
@@ -89,6 +89,14 @@
 			background: rgba(0, 0, 0, 1);
 			background-clip: padding-box;
 		}
+
+		ngx-datetime-range-picker {
+			position: absolute;
+			width: 100%;
+			/deep/ .date-input {
+				opacity: 0;
+			}
+		}
 	}
 }
 
