css: trying to recreate theme (from scss) in css

--- a/src/app/@ansyn/ansyn/assets/styles/styles.css
+++ b/src/app/@ansyn/ansyn/assets/styles/styles.css
@@ -2,6 +2,7 @@
 @import "~flatpickr/dist/flatpickr.css";
 @import "~@ansyn/event-drops/style.css";
 @import "bootstrap/carousel.css";
+@import "bootstrap/ngx-datetime-range-picker.css";
 @import 'icons.css';
 @import 'tooltip.css';
 @import "~primeng/resources/primeng.min.css";
