--- a/src/app/@ansyn/ansyn/modules/core/components/credentials/credentials.component.less
+++ b/src/app/@ansyn/ansyn/modules/core/components/credentials/credentials.component.less
@@ -2,16 +2,19 @@
 @import 'ansyn/less/z-index-globals';
 
 @title-color: #393b3f;
-@approve-permissions: #222223;
+@authorizedBackground: #222223;
 @background: #131518;
 @border: #191b1c;
+@border-radius: 15px;
 
 :host {
 	position: absolute;
 	width: 100vw;
 	height: 100vh;
-	background-color: rgba(0,0,0, 0.7);
-	div.credentials{
+	background-color: rgba(0, 0, 0, 0.7);
+	user-select: none;
+
+	div.credentials {
 		position: relative;
 		top: 10%;
 		width: 350px;
@@ -22,6 +25,9 @@
 		color: white;
 		cursor: default;
 
+		&.rtl {
+			direction: rtl;
+		}
 
 		div.title {
 			display: flex;
@@ -30,15 +36,15 @@
 			justify-content: space-between;
 			padding: 10px;
 			font-size: 20px;
-			border-top-left-radius: 5px;
-			border-top-right-radius: 5px;
+			border-top-left-radius: @border-radius;
+			border-top-right-radius: @border-radius;
 
 			span {
 				cursor: pointer;
 			}
 		}
 
-		div.approve, div.not-approve {
+		div.authorized, div.unauthorized {
 			background-color: @background;
 			display: flex;
 			flex-direction: column;
@@ -49,14 +55,16 @@
 			i {
 				font-size: 30px;
 			}
+
 			i, span {
 				margin: 10px;
 			}
 		}
 
-		div.approve {
-			background-color: @approve-permissions;
+		div.authorized {
+			background-color: @authorizedBackground;
 			padding-bottom: 25px;
+
 			i {
 				color: @application-primary-color;
 			}
@@ -75,10 +83,17 @@
 				margin: 5px;
 				cursor: pointer;
 			}
+
 			span.ask-permission {
 				color: @application-primary-color;
 				border: 1px solid @application-primary-color;
 				padding: 5px;
+
+				&.disabled {
+					opacity: 0.3;
+					cursor: not-allowed;
+					pointer-events: none;
+				}
 			}
 		}
 
@@ -88,11 +103,12 @@
 			display: flex;
 			justify-content: flex-end;
 			padding: 10px;
-			border-bottom-left-radius: 5px;
-			border-bottom-right-radius: 5px;
+			border-bottom-left-radius: @border-radius;
+			border-bottom-right-radius: @border-radius;
 
 			span {
-				margin-left: 5px;
+				margin-left: @border-radius;
+				margin-right: @border-radius;
 				cursor: pointer;
 
 				i {
@@ -100,6 +116,7 @@
 				}
 			}
 		}
+
 		div.circles {
 			display: flex;
 			flex-direction: row;
@@ -114,5 +131,4 @@
 			}
 		}
 	}
-
 }
