--- a/src/app/@ansyn/ansyn/modules/menu-items/algorithms/components/tasks-form/tasks-form.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/algorithms/components/tasks-form/tasks-form.component.html
@@ -1,4 +1,4 @@
-<form #f="ngForm" (ngSubmit)="onSubmit()" style="margin-top: 15px">
+<form dir="rtl" #f="ngForm" (ngSubmit)="onSubmit()" style="margin-top: 15px">
 
 	<div class=" small-padding-left">{{'Status' | translate}}</div>
 	<div class="big-font wide-underline small-padding-left margin">{{taskStatus | translate}}</div>
