--- a/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotations-context-menu-buttons/annotations-context-menu-buttons.component.less
+++ b/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotations-context-menu-buttons/annotations-context-menu-buttons.component.less
@@ -1,4 +1,5 @@
 @import "ansyn/less/colors";
+@import "ansyn/less/z-index-globals";
 
 :host {
 	position: absolute;
@@ -16,6 +17,7 @@
 	padding: 2px;
 	transform: translate(calc(~'100% + 15px'), -12px);
 	transition: right 0.2s, top 0.2s;
+	z-index: @z-index-annotation-cotext-menu-buttons;
 
 	button {
 		background-color: @background-color-3;
