--- a/src/app/@ansyn/ansyn/modules/core/components/credentials/credentials.component.html
+++ b/src/app/@ansyn/ansyn/modules/core/components/credentials/credentials.component.html
@@ -1,9 +1,9 @@
-<div class="credentials">
-	<div class="title">{{'Permissions' | translate}}| {{credentialsService?.user?.name}}
+<div class="credentials" [ngClass]="'rtl' === ('direction' | translate) ? 'rtl' : ''">
+	<div class="title">{{'Permissions' | translate}} | {{credentialsService?.user}}
 		<span class="close-btn" (click)="closeWindow()">X</span></div>
 	<div *ngIf="credentialsService?.error; else credentials">{{credentialsService?.error?.message | translate}}</div>
 	<ng-template #credentials>
-		<div class="approve">
+		<div class="authorized" *ngIf="hasAuthorized()">
 			<i class="icon-credentials"></i>
 			<span>{{'You have permissions for:' | translate}}</span>
 			<div class="circles">
@@ -11,15 +11,18 @@
 			</div>
 		</div>
 
-		<div class="not-approve">
+		<div class="unauthorized" *ngIf="hasNoAuthorized()">
 			<i class="icon-credentials-request"></i>
 			<span>{{'You don\'t have permissions for:' | translate}}</span>
 			<div class="circles">
-				<p *ngFor="let area of credentialsService?.unauthorizedAreas | slice:0:5" class="circle">{{area.name}}</p>
+				<p *ngFor="let area of credentialsService?.unauthorizedAreas | slice:0:5"
+				   class="circle">{{area.Name}}</p>
 			</div>
 		</div>
 		<div class="buttons">
-		<span class="ask-permission" (click)="credentialsService.openPermissionSite()">
+		<span class="ask-permission"
+			  (click)="credentialsService.openPermissionSite()"
+			  [class.disabled]="!hasNoAuthorized()">
 			{{'Ask for permissions' | translate}}
 		</span>
 			<span class="close-btn" (click)="closeWindow()">{{'Cancel' | translate }}</span>
