--- a/src/app/@ansyn/menu/menu/menu.component.html
+++ b/src/app/@ansyn/menu/menu/menu.component.html
@@ -20,29 +20,30 @@
 				class="menu-btn bottom"
 				[class.first-start]="isUserFirstEntrance"
 				[class.active]="isActive(menuItem.name)"
-				(click)="toggleItem(menuItem.name)">
+				(click)="toggleItem(menuItem.name, true)">
 
 				<i [ngClass]="menuItem.iconClass"></i>
-				<span class="badge bottom" [hidden]="!isUserFirstEntrance" > </span>
+				<span class="badge bottom" [hidden]="!isUserFirstEntrance"> </span>
 				{{menuItem.name | translate}}
 			</div>
-			<div class="logo" *ngIf="menuConfig?.forkMe?.active">
+			<div class="logo">
 
-				<ng-container>
+				<ng-container *ngIf="menuConfig?.forkMe?.active">
 					<a class="forkMe" [href]="menuConfig.forkMe?.href" target="_blank">
 						<img [src]="menuConfig.forkMe?.image" [alt]="menuConfig.forkMe?.title"
 							 [title]="menuConfig.forkMe?.title">
 					</a>
 				</ng-container>
+
+				<div class="mode"
+					 *ngIf="menuConfig?.mode"
+					 [style.color]="menuConfig.color"
+					 [style.background]="menuConfig.background"
+					 [style.border]="'1px sollid' + menuConfig.color">
+					{{menuConfig.mode}}
+				</div>
+				<img [src]="menuConfig.path" [alt]="version" [title]="version" (click)="resetApp()">
 			</div>
-			<div class="mode"
-				 *ngIf="menuConfig?.mode"
-				 [style.color]="menuConfig.color"
-				 [style.background]="menuConfig.background"
-				 [style.border]="'1px sollid' + menuConfig.color"
-			>{{menuConfig.mode}}
-			</div>
-			<img [src]="menuConfig.path" [alt]="version" [title]="version" (click)="resetApp()">
 		</div>
 
 		<button
