--- a/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotation-context-menu/annotation-context-menu.component.html
+++ b/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotation-context-menu/annotation-context-menu.component.html
@@ -5,15 +5,14 @@
 
 		<div class="context-menu" [style.outline-color]="getFeatureProps(featureId)?.style?.initial?.stroke">
 			<ansyn-annotations-context-menu-buttons
-			[annotations]="annotations"
-			[featureId]="featureId"
-			[selectedTab]="selectedTab"
-			></ansyn-annotations-context-menu-buttons>
+				[annotations]="annotations"
+				[featureId]="featureId"
+				[selectedTab]="selectedTab">
+			</ansyn-annotations-context-menu-buttons>
 		</div>
-
 	</div>
 </ng-container>
-<div class="context-menu-wrapper"
+<div class="context-menu-wrapper hover"
 	 *ngIf="annotations?.idToEntity?.has(hoverFeatureId)"
 	 [ngStyle]="calcBoundingRect(hoverFeatureId)">
 	<div class="context-menu" [style.outline-color]="getFeatureProps(hoverFeatureId)?.style?.initial?.stroke"></div>
