--- a/src/app/@ansyn/ansyn/assets/styles/icons.css
+++ b/src/app/@ansyn/ansyn/assets/styles/icons.css
@@ -1,11 +1,12 @@
-.icon-layer-add:before { content: '\e800'; } /* '' */
+
+.icon-add:before { content: '\e800'; } /* '' */
 .icon-annotation-arrow:before { content: '\e801'; } /* '' */
 .icon-annotation-circle:before { content: '\e802'; } /* '' */
 .icon-annotation-color:before { content: '\e803'; } /* '' */
-.icon-annotation-linestring:before { content: '\e804'; } /* '' */
+.icon-annotation-line:before { content: '\e804'; } /* '' */
 .icon-annotation-point:before { content: '\e805'; } /* '' */
 .icon-annotation-polygon:before { content: '\e806'; } /* '' */
-.icon-annotation-rectangle:before { content: '\e807'; } /* '' */
+.icon-annotation-rectamgle:before { content: '\e807'; } /* '' */
 .icon-annotation-weight:before { content: '\e808'; } /* '' */
 .icon-annotations:before { content: '\e809'; } /* '' */
 .icon-automatic-image-processing:before { content: '\e80a'; } /* '' */
@@ -14,14 +15,15 @@
 .icon-delete:before { content: '\e80d'; } /* '' */
 .icon-edit:before { content: '\e80e'; } /* '' */
 .icon-layer-export:before { content: '\e80f'; } /* '' */
-.icon-favorite-full:before { content: '\e810'; } /* '' */
-.icon-favorite-empty:before { content: '\e811'; } /* '' */
+.icon-favorites-active:before { content: '\e810'; } /* '' */
+.icon-favorites:before { content: '\e811'; } /* '' */
 .icon-frame-mode:before { content: '\e812'; } /* '' */
 .icon-layer-import:before { content: '\e813'; } /* '' */
 .icon-input-filter:before { content: '\e814'; } /* '' */
 .icon-layers-hide:before { content: '\e815'; } /* '' */
 .icon-layers-show:before { content: '\e816'; } /* '' */
-.icon-status-bar-share-link:before { content: '\e818'; } /* '' */
+.icon-change-map:before { content: '\e817'; } /* '' */
+.icon-link:before { content: '\e818'; } /* '' */
 .icon-main-cases:before { content: '\e819'; } /* '' */
 .icon-main-data-layers:before { content: '\e81a'; } /* '' */
 .icon-main-filters:before { content: '\e81b'; } /* '' */
@@ -29,18 +31,17 @@
 .icon-main-tools:before { content: '\e81d'; } /* '' */
 .icon-quick-loop-add:before { content: '\e81e'; } /* '' */
 .icon-main-uploads:before { content: '\e81f'; } /* '' */
-.icon-credentials:before { content: '\e820'; } /* '' */
 .icon-quick-loop:before { content: '\e821'; } /* '' */
 .icon-remove-overlay:before { content: '\e822'; } /* '' */
 .icon-main-algorithms:before { content: '\e823'; } /* '' */
-.icon-copy-coords:before { content: '\e824'; } /* '' */
+.icon-copy:before { content: '\e824'; } /* '' */
 .icon-label:before { content: '\e825'; } /* '' */
-.icon-drag-layer-copy:before { content: '\e826'; } /* '' */
-.icon-angle-prev:before { content: '\e827'; } /* '' */
-.icon-angle-next:before { content: '\e828'; } /* '' */
+.icon-drag-annotations:before { content: '\e826'; } /* '' */
+.icon-angle-next:before { content: '\e827'; } /* '' */
+.icon-angle-prev:before { content: '\e828'; } /* '' */
 .icon-shadow-mouse:before { content: '\e829'; } /* '' */
 .icon-share:before { content: '\e82a'; } /* '' */
-.icon-icon-status-bar-case:before { content: '\e82b'; } /* '' */
+.icon-status-bar-case:before { content: '\e82b'; } /* '' */
 .icon-status-bar-geo:before { content: '\e82c'; } /* '' */
 .icon-status-bar-imagery-count:before { content: '\e82d'; } /* '' */
 .icon-status-bar-next:before { content: '\e82e'; } /* '' */
@@ -51,26 +52,26 @@
 .icon-tools-go-to:before { content: '\e833'; } /* '' */
 .icon-tools-image-processing:before { content: '\e834'; } /* '' */
 .icon-tools-ruler:before { content: '\e835'; } /* '' */
-.icon-download-guid:before { content: '\e836'; } /* '' */
-.icon-upload-button:before { content: '\e837'; } /* '' */
+.icon-upload:before { content: '\e837'; } /* '' */
 .icon-restore-overlay:before { content: '\e838'; } /* '' */
 .icon-export-maps:before { content: '\e839'; } /* '' */
 .icon-pin-point:before { content: '\e83a'; } /* '' */
-.icon-context-menu-first:before { content: '\e83b'; } /* '' */
-.icon-context-menu-angle:before { content: '\e83c'; } /* '' */
-.icon-context-menu-prev:before { content: '\e83d'; } /* '' */
-.icon-context-menu-best:before { content: '\e83e'; } /* '' */
-.icon-context-menu-next:before { content: '\e83f'; } /* '' */
-.icon-context-menu-last:before { content: '\e840'; } /* '' */
-.icon-screen-2:before { content: '\e841'; } /* '' */
+.icon-first:before { content: '\e83b'; } /* '' */
+.icon-context-angle:before { content: '\e83c'; } /* '' */
+.icon-context-prev:before { content: '\e83d'; } /* '' */
+.icon-context-best:before { content: '\e83e'; } /* '' */
+.icon-next:before { content: '\e83f'; } /* '' */
+.icon-context-last:before { content: '\e840'; } /* '' */
+.icon-screen-3:before { content: '\e841'; } /* '' */
 .icon-screen-6:before { content: '\e842'; } /* '' */
 .icon-screen-5:before { content: '\e843'; } /* '' */
 .icon-screen-4:before { content: '\e844'; } /* '' */
-.icon-screen-3:before { content: '\e845'; } /* '' */
+.icon-screen-2:before { content: '\e845'; } /* '' */
 .icon-screen-1:before { content: '\e846'; } /* '' */
-.icon-drag:before { content: '\e847'; } /* '' */
+.icon-drag-maps:before { content: '\e847'; } /* '' */
 .icon-main-settings:before { content: '\e848'; } /* '' */
 .icon-credentials-request:before { content: '\e849'; } /* '' */
 .icon-unpin:before { content: '\e84a'; } /* '' */
 .icon-pin:before { content: '\e84b'; } /* '' */
+.icon-credentials:before { content: '\e84c'; } /* '' */
 .icon-status-bar-orientation:before { content: '\e90d'; } /* '' */
