--- a/src/app/@ansyn/ansyn/modules/plugins/components/imagery-change-map/imagery-change-map.component.html
+++ b/src/app/@ansyn/ansyn/modules/plugins/components/imagery-change-map/imagery-change-map.component.html
@@ -7,11 +7,13 @@
 	</button>
 </div>
 <div class="popup scrolled" *ngIf="showPopup">
-	<div *ngFor="let source of mockSourceTypes"
-			class="map">
+	<div *ngFor="let source of mapSources"
+		 class="map">
 		<button
-			(click)="changeMap(source.map, source.type)">
-			<p>{{source.name}}</p>
+			(click)="changeMap(source.key)"
+			[attr.tooltip-value]="source.displayName"
+			tooltip-class="wrap">
+			<p>{{source.displayName}}</p>
 			<img src="{{source.thumbnail}}" />
 		</button>
 	</div>
