--- a/src/app/@ansyn/ansyn/modules/overlays/overlay-status/overlay-status.component.html
+++ b/src/app/@ansyn/ansyn/modules/overlays/overlay-status/overlay-status.component.html
@@ -26,5 +26,5 @@
 		[disabled]="!isLayersVisible || noGeoRegistration"
 		[attr.tooltip-value]="this.draggedButtonText | translate"
 		tooltip-class="bottom right">
-	<i class="icon-drag-map" [class.active]="isDragged"></i>
+	<i class="icon-drag-annotations" [class.active]="isDragged"></i>
 </button>
