--- a/src/app/@ansyn/ansyn/modules/plugins/components/imagery-change-map/imagery-change-map.component.html
+++ b/src/app/@ansyn/ansyn/modules/plugins/components/imagery-change-map/imagery-change-map.component.html
@@ -1,4 +1,4 @@
-<div class="buttons" [class.active]="showPopup">
+<div class="buttons" [class.active]="showPopup" [class.disabled]="overlayDisplay">
 	<button class="small-icon-button"
 			(click)="togglePopup()"
 			[attr.tooltip-value]="'Change map' | translate"
