--- a/src/app/@ansyn/ansyn/assets/styles/icons.css
+++ b/src/app/@ansyn/ansyn/assets/styles/icons.css
@@ -35,7 +35,7 @@
 .icon-main-algorithms:before { content: '\e823'; } /* '' */
 .icon-copy-coords:before { content: '\e824'; } /* '' */
 .icon-label:before { content: '\e825'; } /* '' */
-.icon-drag-layer-copy:before { content: '\e826'; } /* '' */
+.icon-drag-map:before { content: '\e826'; } /* '' */
 .icon-angle-prev:before { content: '\e827'; } /* '' */
 .icon-angle-next:before { content: '\e828'; } /* '' */
 .icon-shadow-mouse:before { content: '\e829'; } /* '' */
@@ -62,15 +62,15 @@
 .icon-context-menu-best:before { content: '\e83e'; } /* '' */
 .icon-context-menu-next:before { content: '\e83f'; } /* '' */
 .icon-context-menu-last:before { content: '\e840'; } /* '' */
-.icon-screen-2:before { content: '\e841'; } /* '' */
+.icon-screen-3:before { content: '\e841'; } /* '' */
 .icon-screen-6:before { content: '\e842'; } /* '' */
 .icon-screen-5:before { content: '\e843'; } /* '' */
 .icon-screen-4:before { content: '\e844'; } /* '' */
-.icon-screen-3:before { content: '\e845'; } /* '' */
+.icon-screen-2:before { content: '\e845'; } /* '' */
 .icon-screen-1:before { content: '\e846'; } /* '' */
 .icon-drag:before { content: '\e847'; } /* '' */
 .icon-main-settings:before { content: '\e848'; } /* '' */
 .icon-credentials-request:before { content: '\e849'; } /* '' */
-.icon-unpin:before { content: '\e84a'; } /* '' */
-.icon-pin:before { content: '\e84b'; } /* '' */
+.icon-pin:before { content: '\e84a'; } /* '' */
+.icon-unpin:before { content: '\e84b'; } /* '' */
 .icon-status-bar-orientation:before { content: '\e90d'; } /* '' */
