change config to array and fix promis-observable issuse

--- a/src/app/@ansyn/ansyn/modules/plugins/components/imagery-change-map/imagery-change-map.component.html
+++ b/src/app/@ansyn/ansyn/modules/plugins/components/imagery-change-map/imagery-change-map.component.html
@@ -13,8 +13,7 @@
 		<button
 			(click)="changeMap(source.key)"
 			[attr.tooltip-value]="source.displayName"
-			tooltip-class="wrap"
-		>
+			tooltip-class="wrap">
 			<p>{{source.displayName}}</p>
 			<img src="{{source.thumbnail}}" />
 		</button>
