--- a/src/app/@ansyn/ansyn/modules/core/components/credentials/credentials.component.html
+++ b/src/app/@ansyn/ansyn/modules/core/components/credentials/credentials.component.html
@@ -7,7 +7,7 @@
 			<i class="icon-credentials"></i>
 			<span>{{'You have permissions for:' | translate}}</span>
 			<div class="circles">
-				<p *ngFor="let area of credentialsService?.authorizedAreas | slice:0:5" class="circle">{{area.name}}</p>
+				<p *ngFor="let area of credentialsService?.authorizedAreas | slice:0:5" class="circle">{{area.Name}}</p>
 			</div>
 		</div>
 
