--- a/src/app/@ansyn/ansyn/modules/core/components/credentials/credentials.component.less
+++ b/src/app/@ansyn/ansyn/modules/core/components/credentials/credentials.component.less
@@ -107,8 +107,8 @@
 			border-bottom-right-radius: @border-radius;
 
 			span {
-				margin-left: @border-radius;
-				margin-right: @border-radius;
+				margin-left: 5px;
+				margin-right: 5px;
 				cursor: pointer;
 
 				i {
