add all and cancel toggle

--- a/src/app/@ansyn/ansyn/modules/status-bar/components/combo-boxes/combo-boxes.component.html
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/combo-boxes/combo-boxes.component.html
@@ -10,7 +10,7 @@
 				[isActive]="dataInputFilterExpand"
 				[attr.tooltip-value]="toolTips.dataInputFilter | translate"
 				tooltip-class="top">
-			<span class="render">{{ dataInputFiltersTitle | translate}}</span>
+			<span class="render">{{ dataInputFilters.title | translate}}</span>
 		</button>
 
 		<ansyn-tree-view
