--- a/src/app/@ansyn/ansyn/modules/status-bar/components/status-bar/status-bar.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/status-bar/status-bar.component.less
@@ -48,8 +48,8 @@
 }
 
 
-@screens-list: 1800px, 1700px, 1600px, 1500px;
-@screen-list-width: 120px, 100px, 80px, 60px;
+/*@screens-list: 1800px, 1700px, 1600px, 1500px;
+@screen-list-width: 120px, 120px, 120px, 120px;
 
 .screens(@list, @i: 1) when (@i <= length(@list)) {
 	@screen-size: extract(@list, @i);
@@ -70,7 +70,7 @@
 	.screens(@list, @i + 1);
 }
 
-.screens(@screens-list);
+.screens(@screens-list);*/
 
 @media screen and (max-width: 1600px) {
 	:host {
