--- a/src/app/@ansyn/ansyn/modules/status-bar/components/combo-boxes/combo-boxes.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/combo-boxes/combo-boxes.component.less
@@ -6,6 +6,9 @@
 	position: relative;
 	height: 100%;
 
+	.combo-box-width {
+		width: fit-content;
+	}
 	.block {
 		box-sizing: border-box;
 		vertical-align: middle;
