--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -304,15 +304,19 @@
   },
   "toolsConfig": {
     "GoTo": {
-      "from": {
-        "datum": "wgs84",
-        "projection": "geo"
-      },
-      "to": {
-        "datum": "ed50",
-        "projection": "utm"
-      }
-    },
+	  "geoWgs84": {
+		"datum": "wgs84",
+		"projection": "geo"
+	  },
+	  "utmEd50": {
+		"datum": "ed50",
+		"projection": "utm"
+	  },
+	  "utmWgs84": {
+		"datum": "wgs84",
+		"projection": "utm"
+	  }
+	},
     "ImageProcParams": [
       {
         "name": "Sharpness",
