feat(utm-wgs.component)

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -269,14 +269,18 @@
   },
   "toolsConfig": {
     "GoTo": {
-      "from": {
-        "datum": "wgs84",
-        "projection": "geo"
-      },
-      "to": {
-        "datum": "ed50",
-        "projection": "utm"
-      }
+      "geoWgs84": {
+		"datum": "wgs84",
+		"projection": "geo"
+	  },
+	  "utmEd50": {
+		"datum": "ed50",
+		"projection": "utm"
+	  },
+	  "utmWgs84": {
+		"datum": "wgs84",
+		"projection": "utm"
+	  }
     },
     "ImageProcParams": [
       {
