--- a/src/app/@ansyn/ansyn/modules/menu-items/tools/go-to/go-to/go-to.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/tools/go-to/go-to/go-to.component.html
@@ -2,59 +2,30 @@
 
 <form #form="ngForm" (ngSubmit)="submitGoTo()">
 
-	<div [ngSwitch]="geoWgs84.projection">
-		<ansyn-geo
-			*ngSwitchCase="'geo'"
-			name="geoWgs84"
-			[(ngModel)]="inputs.geoWgs84"
-			(ngModelChange)="convert($event, geoWgs84, utmEd50, 'utmEd50')"
-			(copyToClipBoardHandler)="copyToClipBoard($event)"
-			required>
-		</ansyn-geo>
-
-		<ansyn-utm
-			*ngSwitchCase="'utm'"
-			name="utmEd50"
-			[notification]="notification"
-			[(ngModel)]="inputs.geoWgs84"
-			(ngModelChange)="convert($event, geoWgs84, utmEd50, 'utmEd50')"
-			(copyToClipBoardHandler)="copyToClipBoard($event)"
-			required>
-		</ansyn-utm>
-
-	</div>
-
-
-	<div [ngSwitch]="utmEd50.projection">
-		<ansyn-utm
-			*ngSwitchCase="'utm'"
-			name="utmEd50"
-			[notification]="notification"
-			[(ngModel)]="inputs.utmEd50"
-			(ngModelChange)="convert($event, utmEd50, geoWgs84, 'geoWgs84')"
-			(copyToClipBoardHandler)="copyToClipBoard($event)"
-			required>
-		</ansyn-utm>
-
-		<ansyn-geo
-			*ngSwitchCase="'geo'"
-			name="geoWgs84"
-			[(ngModel)]="inputs.utmEd50"
-			(ngModelChange)="convert($event, utmEd50, geoWgs84, 'geoWgs84')"
-			(copyToClipBoardHandler)="copyToClipBoard($event)"
-			required>
-		</ansyn-geo>
-
-	</div>
-
-	<ansyn-utm
-		name="utmWgs84"
-		[notification]="notification"
+	<ansyn-geo-wgs
+		name="geoWgs84"
 		[(ngModel)]="inputs.geoWgs84"
-		(ngModelChange)="convert($event, geoWgs84, utmWgs84, 'utmWgs84')"
+		(ngModelChange)="convert($event, geoWgs84)"
 		(copyToClipBoardHandler)="copyToClipBoard($event)"
 		required>
-	</ansyn-utm>
+	</ansyn-geo-wgs>
+
+	<ansyn-utm-ed50
+		name="utmEd50"
+		[notification]="notification"
+		[(ngModel)]="inputs.utmEd50"
+		(ngModelChange)="convert($event, utmEd50)"
+		(copyToClipBoardHandler)="copyToClipBoard($event)"
+		required>
+	</ansyn-utm-ed50>
+
+	<ansyn-utm-wgs
+		name="utmWgs84"
+		[(ngModel)]="inputs.utmWgs84"
+		(ngModelChange)="convert($event, utmWgs84)"
+		(copyToClipBoardHandler)="copyToClipBoard($event)"
+		required>
+	</ansyn-utm-wgs>
 
 	<div class="buttons-area">
 
