--- a/src/app/@ansyn/map-facade/components/imagery-mouse-coordinates/imagery-mouse-coordinates.component.html
+++ b/src/app/@ansyn/map-facade/components/imagery-mouse-coordinates/imagery-mouse-coordinates.component.html
@@ -6,11 +6,11 @@
 					  [lat]="lat"
 					  [long]="long"
 					  [height]="height"></ansyn-geo-wgs-holder>
-	<ansyn-utm-ed50-holder *ngSwitchCase="'UTM'"
+	<ansyn-utm-holder *ngSwitchCase="'UTM'"
 					  [x]="long"
 					  [y]="lat"
 					  [zone]="zone"
-					  [height]="height"></ansyn-utm-ed50-holder>
+					  [height]="height"></ansyn-utm-holder>
 	&nbsp;{{floatingPositionSuffix}}
 </div>
 
