--- a/src/app/@ansyn/ansyn/modules/menu-items/tools/go-to/projections/utm/utm.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/tools/go-to/projections/utm/utm.component.html
@@ -1,5 +1,5 @@
 <div class="goto-projection-title">
-	<span>UTM ED50</span>
+	<span> {{ title }} </span>
 	<span *ngIf="notification" class="ed50-notification">{{notification?.title}}
 		<a [href]="notification?.href" target="_blank">
 			{{ notification?.hrefText }}
