update default case

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -94,7 +94,7 @@
 		   },
 		   "dataInputFilters": {
 			 "filters": [],
-			 "active": false
+			 "fullyChecked": true
 		   },
 		   "time": null,
 		   "facets": {
