Positioning the picker above the timeline

--- a/src/app/@ansyn/ansyn/modules/status-bar/components/combo-boxes/combo-boxes.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/combo-boxes/combo-boxes.component.less
@@ -96,6 +96,10 @@
 			/deep/ .date-input {
 				opacity: 0;
 			}
+			/deep/ .calendar-view {
+				right: 0;
+				bottom: 47px; // todo: calculate
+			}
 		}
 	}
 }
