--- a/src/app/@ansyn/ansyn/modules/plugins/components/imagery-zoomer/imagery-zoomer.component.html
+++ b/src/app/@ansyn/ansyn/modules/plugins/components/imagery-zoomer/imagery-zoomer.component.html
@@ -17,10 +17,10 @@
 		</button>
 	</div>
 
-	<div class="buttons">
+<!--	<div class="buttons">
 		<button class="small-icon-button"
 				(click)="one2one()">
 			1:1
 		</button>
-	</div>
+	</div>-->
 </div>
