--- a/src/app/@ansyn/ansyn/modules/menu-items/tools/tools/tools.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/tools/tools/tools.component.html
@@ -84,8 +84,7 @@
 	<div class="export-maps-tool">
 		<button tooltip-class="right"
 				[attr.tooltip-value]="'Export maps' | translate"
-				(click)="exportMapsToPng()"
-		>
+				(click)="toggleExportMapsDialog()">
 			<i class="icon-export-maps"></i>
 		</button>
 	</div>
