feat(export-maps-popup): adding the export map popup

--- a/src/app/@ansyn/ansyn/assets/styles/styles.css
+++ b/src/app/@ansyn/ansyn/assets/styles/styles.css
@@ -22,6 +22,15 @@ circle.drop.selected {
 		overflow: hidden;
 }
 
+.close.mat-button {
+	position: absolute;
+	top: 0;
+	right: 0;
+	padding: 5px;
+	line-height: 14px;
+	min-width: auto;
+}
+
 .main-timeline {
 	padding: 0 10px;
 	width: 100%;
