--- a/src/app/@ansyn/ansyn/modules/menu-items/tools/export-maps-popup/export-maps-popup.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/tools/export-maps-popup/export-maps-popup.component.less
@@ -11,6 +11,10 @@
 			background-color: @background-color-4;
 			color: white;
 		}
+
+		.info {
+			background-color: @background-color-2;
+		}
 	}
 
 	.btn-area {
