--- a/src/app/@ansyn/ansyn/modules/menu-items/tools/export-maps-popup/export-maps-popup.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/tools/export-maps-popup/export-maps-popup.component.html
@@ -1,5 +1,4 @@
 <div class="dialog-area">
-
 	<div mat-dialog-content>
 		<div mat-dialog-title>
 			<h1 mat-dialog-title>Notice!</h1>
@@ -7,7 +6,7 @@
 		<mat-progress-bar color="primary" mode="indeterminate"></mat-progress-bar>
 		<br>
 		<i class="icon-credentials-request"></i>
-		<p mat-label> Your image is in process, <br>
+		<p mat-dialog-title class="info"> Your image is in process, <br>
 			Keep in mind that the image may be protected.
 		</p>
 		<div class="btn-area">
