--- a/src/app/@ansyn/ansyn/modules/status-bar/components/combo-boxes/combo-boxes.component.html
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/combo-boxes/combo-boxes.component.html
@@ -10,11 +10,11 @@
 				[isActive]="dataInputFilterExpand"
 				[attr.tooltip-value]="toolTips.dataInputFilter | translate"
 				tooltip-class="top">
-			<span class="render">{{ dataInputFilterTitle }}</span>
+			<span class="render">{{ dataInputFilterTitle | translate }}</span>
 		</button>
 
 		<ansyn-tree-view
-			[style.visibility]="dataInputFilterExpand ? 'visible' : 'collapse'"
+			*ngIf="dataInputFilterExpand"
 			(ansynClickOutside)="toggleDataInputFilterIcon()"
 			[trigger]="trigger?.optionsTrigger?.nativeElement"
 			(closeTreeView)="toggleDataInputFilterIcon()"
