status bar new style

--- a/src/app/@ansyn/ansyn/less/colors.less
+++ b/src/app/@ansyn/ansyn/less/colors.less
@@ -16,3 +16,8 @@
 @background-color-11: #d8d8d8;
 @background-color-12: white;
 
+@status-bar-background: #171717;
+@status-bar-panels: #3e3e3e;
+@status-bar-active: #0091ff;
+@status-bar-hover: #666666;
+@status-bar-delimiter: #484848;
