--- a/src/app/@ansyn/ansyn/less/globals.less
+++ b/src/app/@ansyn/ansyn/less/globals.less
@@ -1,5 +1,6 @@
 @ansyn-menu-width: 430px;
-@status-bar-height: 35px;
+@status-bar-height: 55px;
+@imagery-status-height: 35px;
 @source-type-notice-width: 40%;
 @welcome-notification-width: 30%;
 @timeline-area-height: 110px;
