--- a/src/app/@ansyn/ansyn/modules/core/forms/combo-box-trigger/combo-box-trigger.component.less
+++ b/src/app/@ansyn/ansyn/modules/core/forms/combo-box-trigger/combo-box-trigger.component.less
@@ -1,10 +1,12 @@
 @import "ansyn/less/colors";
+@import "ansyn/less/globals";
 
 :host {
 	&:disabled {
 		opacity: .6;
 	}
 
+	font-family: @app-font;
 	height: 100%;
 	width: 100%;
 	overflow: hidden;
