--- a/src/app/@ansyn/map-facade/components/floating-menu/floating-menu.component.less
+++ b/src/app/@ansyn/map-facade/components/floating-menu/floating-menu.component.less
@@ -7,7 +7,7 @@
 :host {
 	position: absolute;
 	z-index: @z-index-map-rotation;
-	top: @status-bar-height + 25;
+	top: @imagery-status-height + 25;
 	right: 20px;
 	text-align: center;
 	user-select: none;
