--- a/src/app/@ansyn/map-facade/components/imagery-status/imagery-status.component.less
+++ b/src/app/@ansyn/map-facade/components/imagery-status/imagery-status.component.less
@@ -10,7 +10,7 @@
 
 :host {
 	position: absolute;
-	height: @status-bar-height;
+	height: @imagery-status-height;
 	z-index: @z-index-imagery-status;
 	display: flex;
 	width: 100%;
@@ -29,7 +29,7 @@
 	}
 
 	.buttons {
-		height: @status-bar-height;
+		height: @imagery-status-height;
 		display: flex;
 
 		button {
