status bar style level 2

--- a/src/app/@ansyn/ansyn/assets/styles/tooltip.css
+++ b/src/app/@ansyn/ansyn/assets/styles/tooltip.css
@@ -10,7 +10,7 @@
 }
 
 [tooltip-value]:not(.active):not(:disabled)[tooltip-class*="top"]:after {
-	/*left: auto;*/
+	left: auto;
 	bottom: auto;
 	transform: translateY(-100%);
 }
