--- a/src/app/@ansyn/ansyn/modules/status-bar/components/case-panel/case-panel.component.html
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/case-panel/case-panel.component.html
@@ -2,14 +2,13 @@
 	{{caseName}}
 </div>
 <div class="bottom">
-	<!-- Overlays -->
 	<div class="box"
 		 [attr.tooltip-value]="toolTips.overlayCount | translate"
-		 tooltip-class="top right">
+		 tooltip-class="top">
 		<i class="block-icon icon-status-bar-imagery-count"></i>
 		<span>{{overlaysCount$ | async}}</span>
 	</div>
-	<div class="box" (click)="copyLink()">
+	<div class="box share" (click)="copyLink()">
 		<i class="icon-share"></i>
 		<span>{{'Share' | translate}}</span>
 	</div>
